--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "cp node_modules/pdfjs-dist/build/pdf.min.mjs public/"
   },
   "dependencies": {
+    "@types/katex": "^0.16.7",
     "next": "15.3.4",
     "openai": "^5.6.0",
     "pdfjs-dist": "^5.3.31",
