--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@types/katex": "^0.16.7",
+    "lucide-react": "^0.525.0",
     "next": "15.3.4",
     "openai": "^5.6.0",
     "pdfjs-dist": "^5.3.31",
