--- a/package.json
+++ b/package.json
@@ -22,13 +22,18 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@prisma/client": "^6.11.0",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
+    "@types/pg": "^8.15.4",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/showdown": "^2.0.6",
+    "better-auth": "^1.2.12",
     "eslint": "^9",
     "eslint-config-next": "15.3.4",
+    "pg": "^8.16.3",
+    "prisma": "^6.11.0",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
